deploy: Leslie-Lu/zhenlu@042ea78cb6448c6914ec1000a8744c23c85f2773

--- a/atom.html
+++ b/atom.html
@@ -257,7 +257,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-file-modified-sort="1715407130694" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
+<div class="quarto-post image-right" data-index="0" data-listing-file-modified-sort="1715415710225" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
 <div class="thumbnail">
 <p><a href="./blog/index.html" class="no-external"></a></p><a href="./blog/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -282,10 +282,10 @@ Zhen Lu
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-file-modified-sort="1715411529157" data-listing-reading-time-sort="1" data-listing-word-count-sort="184">
+<div class="quarto-post image-right" data-index="1" data-listing-file-modified-sort="1715415710229" data-listing-reading-time-sort="1" data-listing-word-count-sort="184">
 <div class="thumbnail">
 <p><a href="./index.html" class="no-external"></a></p><a href="./index.html" class="no-external">
-<p class="card-img-top"><img src="files\profiles\avatar.jpg" alt="Zhen Lu"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="files/profiles/avatar.jpg" alt="Zhen Lu"  class="thumbnail-image card-img"/></p>
 </a><p><a href="./index.html" class="no-external"></a></p>
 </div>
 <div class="body">
@@ -304,7 +304,7 @@ Zhen Lu
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-listing-file-modified-sort="1715406462672" data-listing-reading-time-sort="1" data-listing-word-count-sort="101">
+<div class="quarto-post image-right" data-index="2" data-listing-file-modified-sort="1715415710229" data-listing-reading-time-sort="1" data-listing-word-count-sort="101">
 <div class="thumbnail">
 <p><a href="./publications/index.html" class="no-external"></a></p><a href="./publications/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -326,7 +326,7 @@ Zhen Lu
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-listing-file-modified-sort="1715406372368" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
+<div class="quarto-post image-right" data-index="3" data-listing-file-modified-sort="1715415710229" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
 <div class="thumbnail">
 <p><a href="./talks/index.html" class="no-external"></a></p><a href="./talks/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -348,7 +348,7 @@ Zhen Lu
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-listing-date-sort="1715270400000" data-listing-file-modified-sort="1715407050072" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="92">
+<div class="quarto-post image-right" data-index="4" data-listing-date-sort="1715299200000" data-listing-file-modified-sort="1715415710225" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="92">
 <div class="thumbnail">
 <p><a href="./cv/index.html" class="no-external"></a></p><a href="./cv/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -373,7 +373,7 @@ May 10, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-listing-date-sort="1715270400000" data-listing-file-modified-sort="1715406548701" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="5" data-listing-date-sort="1715299200000" data-listing-file-modified-sort="1715415710229" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
 <div class="thumbnail">
 <p><a href="./news/index.html" class="no-external"></a></p><a href="./news/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -398,7 +398,7 @@ May 10, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="6" data-listing-date-sort="1715270400000" data-listing-file-modified-sort="1715406292878" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="6" data-listing-date-sort="1715299200000" data-listing-file-modified-sort="1715415710229" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
 <div class="thumbnail">
 <p><a href="./uses/index.html" class="no-external"></a></p><a href="./uses/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
