--- a/cv/index.html
+++ b/cv/index.html
@@ -116,6 +116,10 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Publications</span></a>
   </li>  
   <li class="nav-item">
+    <a class="nav-link" href="../ai_toolkit/index.html"> 
+<span class="menu-text">AI Toolkit</span></a>
+  </li>  
+  <li class="nav-item">
     <a class="nav-link active" href="../cv/index.html" aria-current="page"> 
 <span class="menu-text">CV</span></a>
   </li>  
