--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Publications</span></a>
   </li>  
   <li class="nav-item">
+    <a class="nav-link" href="./ai_toolkit/index.html"> 
+<span class="menu-text">AI Toolkit</span></a>
+  </li>  
+  <li class="nav-item">
     <a class="nav-link" href="./cv/index.html"> 
 <span class="menu-text">CV</span></a>
   </li>  
