--- a/cv/index.html
+++ b/cv/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Zhen Lu">
 <meta name="description" content="Zhen Lu’s CV">
 
-<title>Curriculum vit | Zhen Lu</title>
+<title>Curriculum vitæ | Zhen Lu</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -168,7 +168,7 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header" class="quarto-title-block default page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
     <div class="quarto-title column-body">
-      <h1 class="title">Curriculum vit<c3><a6></a6></c3></h1>
+      <h1 class="title">Curriculum vitæ</h1>
                   <div>
         <div class="description">
           Zhen Lu’s CV
