--- a/cv/index.html
+++ b/cv/index.html
@@ -212,13 +212,13 @@ ul.task-list li input[type="checkbox"] {
 </style>
 </div>
 <p class="text-center">
-  <a class="btn btn-primary btn-lg cv-download" href="zhen_lu_cv.pdf" target="_blank">
+  <a class="btn btn-primary btn-lg cv-download" href="CV_ZhenLu.pdf" target="_blank">
     <i class="fa-solid fa-file-arrow-down"></i> Download current CV
   </a>
 </p>
 
 <div class="embed-container">
-  <iframe src="zhen_lu_cv.pdf" style="border: 0.5px"></iframe>
+  <iframe src="CV_ZhenLu.pdf" style="border: 0.5px"></iframe>
 </div>
 
 
